# qrgenerator

./: README.md  app.py  pyproject.toml
