[tool.poetry]
name = "qrgen"
version = "0.1.0"
description = "generador de códigos qr para artículos"
authors = ["Carlos Valdemar Soria <carlosvsoria1982@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
qrcode = "^7.3.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
